updated modal to show specific data for each painting

--- a/Art_Gallery/static/css/style.css
+++ b/Art_Gallery/static/css/style.css
@@ -93,3 +93,8 @@ nav .navbar-nav li a{
 li {
 	color: rgb(255, 0, 0) !important;
 }
+
+/* portrait details */
+.painting-details {
+	background-color:aqua;
+}
