--- a/Art_Gallery/templates/index.html
+++ b/Art_Gallery/templates/index.html
@@ -87,27 +87,33 @@
 				row-cols-sm-2 means 2 columns for small screens < 576px
 				row-cols-md-3 means 3 columns for medium screens >= 768px
 			-->
-			<div class="row gy-5 row-cols-2 row-cols-sm-2 row-cols-md-3">
-				<!-- Use a loop in jinja to dynamically inplement paintingObjects made in views.py-->
+			<div class="row gy-5 row-cols-2 row-cols-sm-2 row-cols-md-3 ">
+				
 				{% for paintings in paintingObjects %}
-				<!-- posting images-->
-				<div class="col modal_image_link">
-					<!-- this class is what streamlines all image sizes dynamically -->
-					<div class= "imagehover">
-						<!-- making static images as baseURL variable, useful for dynamically adding images 
-							gallery-item used by main.js -->
-							<img src="{{paintings.painting.url}}" alt="image" class="gallery-item" id="imageid">
-					</div>
-					<div class="paintingObjects_content">
-						<div class="painting_title gallery-item"><a href="" id="painting_title">{{paintings.name}}</a> </div>
-						<div class="painting_description gallery-item">
-							<!-- get object data from views.py -->
-							<p>{{paintings.description}} </p>
+					<!-- posting images-->
+					<div class="col">
+						<div class="painting_title gallery-item"><p id="painting_name">{{paintings.name}}</p> 
 						</div>
-						<!-- jinja format -->
-						<div class="painting_price gallery-item"> ${{paintings.price}}</div>
+						<!-- this class is what streamlines all image sizes dynamically -->
+						<div class= "imagehover">
+							<!-- making static images as baseURL variable, useful for dynamically adding images 
+								gallery-item used by main.js -->
+								<img src="{{paintings.painting.url}}" class="gallery-item gallery-link" id="painting_image" 
+								data-toggle="modal" 
+								data-target="painting-modal" 
+								data-name="{{paintings.name}}" 
+								data-description="{{ paintings.long_description }}"
+								data-price="${{ paintings.price }}">
+						</div>
+						<div class="painting-details">
+							<div class="painting_description gallery-item">
+								<!-- get object data from views.py -->
+								<p id="painting_short-description gallery-item">{{paintings.short_description}} </p>
+							</div>
+							<!-- jinja format -->
+							<div class="painting_price gallery-item">${{paintings.price}}</div>
+						</div>
 					</div>
-				</div>
 				{% endfor %}
 			</div>
 				<!-- END Paintings -->
@@ -116,28 +122,49 @@
 	<!-- END PORTRAIT SECTION -->
 	<!-- MODAL SECTION -->
 	<!-- id ''gallery modal is used by main.js to create modal -->
-	<div class="modal fade" id="gallery-modal" id="building-modal" role="dialog" tabindex="-1" aria-labelledby="myModalLabel" aria-hidden="true">
+	<div class="modal fade" id="painting-modal" role="dialog" tabindex="-1" aria-labelledby="myModalLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
+					<h5 class="modal-title" id="painting-name"></h5>
 					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
-						<span aria-hidden="true">&times;</span>
+						<!-- <span aria-hidden="true">&times;</span> -->
 					</button>
-					<h5 class="modal-title" id="modal_title"></h5>
 				</div>
 				<div class="modal-body">
 					<!-- div for description -->
 					<div>
-						<p id="modal_description"></p>
+						<p id="modal-long-description"></p>
 					</div>
-					<div>
-						<!-- query selector in main.js "modal img" -->
-						<img src="" class="modal-img" alt="modal img" id="modal_image">
+					<!-- add carousel https://getbootstrap.com/docs/4.0/components/carousel/ -->
+					<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+						<div class="carousel-inner">
+						  <div class="carousel-item active">
+							<img class="d-block w-100" id="modal-img" src="" alt="First slide">
+						  </div>
+						  <div class="carousel-item">
+							<img class="d-block w-100" src="{{paintings.painting.url}}" alt="Second slide">
+						  </div>
+						  <div class="carousel-item">
+							<img class="d-block w-100" src="{{paintings.painting.url}}" alt="Third slide">
+						  </div>
+						</div>
+						<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+						  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						  <span class="sr-only"></span>
+						</a>
+						<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+						  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+						  <span class="sr-only"></span>
+						</a>
 					</div>
+					<!-- <div>
+						<img id="modal-img" src="" />
+					</div> -->
 				</div>
 				<div class="modal-footer">
 					<!-- price -->
-					<p id="modal_price"></p>
+					<p id="modal-price"></p>
 					<!-- add to cart -->
 					<a class ="nav-link" href="/" title="View Shopping Cart" id="modal_cart">Add to Cart</a>
 				</div>
@@ -145,7 +172,7 @@
 		</div>
 	</div>
 	<!-- END MODAL -->
-
+	
 	<!-- Footer -->
 	<footer class="footer">
 		<div class="bg-transparent text-center footer_text p-1">
@@ -163,5 +190,30 @@
 
 	<script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 	<script src="{% static 'js/main.js' %}"></script>
+	<!-- ajax stuff lol  -->
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" type="text/javascript"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+
+	<!-- When a link is clicked, grab all the data values and pop them inro the modal -->
+	<script type="text/javascript">
+		$('.gallery-link').click(function(){
+			console.log('link clicked');
+			// id of modal element
+			// painting name
+			$('#painting-name').html($(this).data('name'));
+			// painting description
+			$('#modal-long-description').html($(this).data('description'));
+			// painting 
+			var src = $(this).attr("src");
+			$("#modal-img").prop("src",src);
+			//painting price
+			$('#modal-price').html($(this).data('price'));
+			// show the modal
+			$('#painting-modal').modal('show');
+			
+		});
+	</script>
 	</body>
 </html>
